Fix margin alignment

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -7,6 +7,11 @@ body {
   font-family: @text-font;
 }
 
+.content-section {
+  padding: 5rem;
+  background-color: #060e26;
+}
+
 .content-title-text {
   margin: 0px 20px;
   font-family: @headline-font;
@@ -302,7 +307,7 @@ body {
 }
 
 .login-form, .admin-home-bg {
-  padding: 5rem 5rem 35rem 5rem;
+  padding-bottom: 35rem;
   background-color: rgb(6, 14, 38); // image bg
   
   .right-block {
@@ -383,7 +388,7 @@ body {
 
 .footer {
   .footer-content {
-    padding: 80px;
+    padding: 5rem;
     background-color: #000000;
     color: #FFFFFF;
 
@@ -435,20 +440,16 @@ body {
           background-color: #000000;
           border-color: darkgreen;
         }
-
       }
-
     }
-
   }
-
-
 }
 
 .left-menu {
   background-color: rgb(10, 17, 44);
   font-family: @headline-font;
 
+  padding: 3rem 10px;
 
   a {
     color: #FFFFFF;
